force-app/main/default/objects/Product2/fields/vxDosage__c.field-meta.xml
<CustomField>
    <fullName>vxDosage__c</fullName>
    <description>Dose Value and Dose Unit</description>
    <formula>TEXT( vxDose_Value__c) &amp; &quot; &quot; &amp;  TEXT(vxDose_Unit__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dosage</label>
    <type>Text</type>
</CustomField>