force-app/main/default/objects/Product2/fields/vxDose_Unit__c.field-meta.xml
<CustomField>
    <fullName>vxDose_Unit__c</fullName>
    <description>Unit of mesure</description>
    <inlineHelpText>Unit of measure</inlineHelpText>
    <label>Dose Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ml</fullName>
            </value>
            <value>
                <fullName>ug</fullName>
            </value>
            <value>
                <fullName>%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>