force-app/main/default/objects/Product2/fields/vxDose_Value__c.field-meta.xml
<CustomField>
    <fullName>vxDose_Value__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Numeric Measurement of the vaccine dose</description>
    <inlineHelpText>Numeric Measurement of the vaccine dose</inlineHelpText>
    <label>Dose Value</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>