force-app/main/default/objects/Product2/fields/vxRoute_of_Administration__c.field-meta.xml
<CustomField>
    <fullName>vxRoute_of_Administration__c</fullName>
    <description>Method of administration</description>
    <inlineHelpText>Method of administration</inlineHelpText>
    <label>Route of Administration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Injection (Intradermal)</fullName>
            </value>
            <value>
                <fullName>Injection (Intramuscular)</fullName>
            </value>
            <value>
                <fullName>Injection (Subcutaneous)</fullName>
            </value>
            <value>
                <fullName>Inhalation (Nasal)</fullName>
            </value>
            <value>
                <fullName>Swallow (Oral)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>