force-app/main/default/objects/Product2/recordTypes/Vaccine.recordType-meta.xml
<RecordType>
    <fullName>Vaccine</fullName>
    <active>true</active>
    <description>Vaccine Product</description>
    <label>Vaccine</label>
</RecordType>